QtQml: Restrict MSVC workaround in qqmlprivate.h to MSVC

Other compilers don't need an empty placement delete there, and MinGW
has a different bug that causes it to complain about the placement
delete.

Pick-to: 6.4
Fixes: QTBUG-99057
Change-Id: Ic2f738953a05c2af63875f97e1cd3a6f3074cdd8
Reviewed-by: Sami Shalayel <sami.shalayel@qt.io>
Reviewed-by: Andrei Golubev <andrei.golubev@qt.io>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>